--- a/src/index.css
+++ b/src/index.css
@@ -23,13 +23,37 @@
   }
   .trip {
     color: #000000;
-    font-size: 1.1rem;
-    text-decoration: underline
+    font-size: 1.4rem;
+    text-decoration: underline #631a86;
+    font-weight: bold;
+    border: 2px groove #f45866;
+    background: #f45866;
+    padding: .5em
+  }
+  .details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .price {
+    border: 2px groove #631a86;
+    background: #631a86;
+    color: #e7bb41;
+    width: 30%;
+    padding: .5em;
+    font-size: 1rem;
+    text-align: center;
   }
   .paparazii {
     width: 100%;
     border: 3px groove #0a014f;
     height: 21em;
+    padding: 1em;
+  }
+  .word {
+    color: #f5edf0;
+    border: 2px groove #e7bb41;
+    padding: 1em, 4em;
   }
   .location {
     border: 2px groove #040303;
@@ -42,7 +66,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 1em
+    gap: 2em;
+    width: 90%;
+    margin-left: 4em;
 
   }
   .lone {
@@ -57,8 +83,10 @@
   }
   .stopTimer {
     border: 2px groove #000000;
-    padding: 3em;
-    width: 40%;
+    padding: 2em;
+    width: 55%;
+    justify-self: center;
+    margin-left: 16em;
   }
   .bake-head {
     text-decoration: underline;
@@ -77,10 +105,12 @@
     width: 20%;
     color: #e8c1c5;
     background: #2e294e;
+    cursor: pointer;
   }
  .container {
   background-color: #e83f6f;
   color: #000000;
+  width: 100%
  }
  
 
@@ -104,17 +134,9 @@
   display: flex;
   flex-direction: column;
   gap: .5em;
-  margin-left: 2em;
+  margin: 1.5em;
  }
- .cheese {
-  background-image: url("https://media.giphy.com/media/m7yzbDgdkWbmM/giphy.gif");
-  width: 95%;
-  background-size: cover;
-  background-position-x: center;
-  background-position-y: center;
-  padding: 2em;
-  object-position: 50%;
- }
+ 
  textarea {
   padding: 2em;
   text-align: center;
@@ -138,6 +160,7 @@
  label {
   font-size: 1rem;
   font-weight: bold;
+  
  }
 .cake--container {
   display: flex;
@@ -148,7 +171,7 @@
   padding: 3em;
 }
  .overall {
-   border: 2px groove #f2e94e;
+   border: 5px groove #f2e94e;
 
  }
  .smallchops {
@@ -161,15 +184,7 @@
   width: 45%;
   border-radius: 1.5em;
  }
- .animee {
-  background-image: url("https://media.giphy.com/media/I8iWotgEu6O4g/giphy.gif");
-  background-size: cover;
-  background-position-x: center;
-  background-position-y: center;
-  padding: 15em;
-  width: 59%;
-  height: 4em;
- }
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -183,7 +198,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 300px;
   min-height: 100vh;
 }
 nav {
@@ -198,7 +213,26 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+.bold {
+  font-size: 1.5rem;
+}
+.baker {
+  border: 3px groove #db162f; 
+  font-size: 1.3rem;
+  color: #383961;
+  text-align: center;
+  width: 70%;
+  margin-left: 9.5em;
+  margin-top: 2em;
+}
+p.baker {
+  font-size: 1.1rem
+}
+.sandiqwin {
+   width: 60%;
+   height: 27em;
+   margin-top: 2em;
+}
 
 button:hover {
   border-color: #646cff;
@@ -219,4 +253,273 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+@media(min-width: 300px) and (max-width: 500px){
+  .paparazii {
+    width: 100%;
+    height: 20em;
+  }
+  .location {
+    font-size: 1.3rem;
+    font-weight: bold;
+    width: 32%;
+  }
+  .wrap-paparazii {
+    gap: 1em;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0;
+
+  }
+  .hero {
+    width: 80%;
+    height: 20%;
+    box-shadow: 0 0 1em;
+    border-radius: .5em;
+  }
+  .trip {
+    color: #000000;
+    font-size: 1.1rem;
+    text-decoration: underline
+  }
+  .lone {
+    padding: 1em;
+    width: 20%;
+    font-size: 1.1rem;
+    border-radius: 1em;
+  }
+  .stopTimer {
+    width: 80%;
+    margin-left: 1em
+  }
+  .button-stoop {
+    display: flex;
+    flex-direction: row;
+    gap: .5em;
+    justify-content: center;
+
+  }
+  .stoop {
+    padding: 1em;
+    width: 50%;
+    font-weight: bold;
+  }
+.footer {
+  width: 96%;
+  padding: 1em;
+  margin-top: 1em;
+}
+.baker {
+  font-size: 1.3rem;
+  color: #383961;
+  text-align: center;
+  width: 100%;
+  margin-left: 0;
+  margin-top: 1em;
+}
+.sandiqwin {
+   width: 60%;
+   height: 24em;
+   margin-top: 2em;
+}
+.radios {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  margin-left: 2em;
+  
+ }
+ 
+ label {
+  font-size: 1rem;
+  font-weight: bold;
+  width: 100%
+ }
+ textarea {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5rem;
+  width: 90%;
+  margin-top: 1em
+ }
+
+.cake--container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: .5em;
+  border-radius: 1em;
+  padding: 3em;
+  width: 100%;
+}
+ .overall {
+   border: 2px groove #f2e94e;
+   width: 80%;
+   padding: 5em;
+   margin-left: -2em
+
+ }
+ .form--container {
+  gap: .5em;
+  padding: 2em;
+  width: 100%;
+  margin-left: -4em;
+ }
+ input {
+  padding: 1em;
+  width: 100%;
+  font-size: 1rem;
+  border-radius: .5em;
+  margin-top: .5em;
+ }
+ 
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+  
+}
+
+@media(min-width: 500px) and (max-width: 800px){
+  .paparazii {
+    width: 100%;
+    height: 20em;
+  }
+  .location {
+    font-size: 1.3rem;
+    font-weight: bold;
+    width: 32%;
+  }
+  .wrap-paparazii {
+    gap: 1em;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0;
+
+  }
+  .hero {
+    width: 80%;
+    height: 20%;
+    box-shadow: 0 0 1em;
+    border-radius: .5em;
+  }
+  .trip {
+    color: #000000;
+    font-size: 1.1rem;
+    text-decoration: underline
+  }
+  .lone {
+    padding: 1em;
+    width: 20%;
+    font-size: 1.1rem;
+    border-radius: 1em;
+  }
+  .stopTimer {
+    width: 80%;
+    margin-left: 1em
+  }
+  .button-stoop {
+    display: flex;
+    flex-direction: row;
+    gap: .5em;
+    justify-content: center;
+
+  }
+  .stoop {
+    padding: 1em;
+    width: 50%;
+    font-weight: bold;
+  }
+.footer {
+  width: 96%;
+  padding: 1em;
+  margin-top: 1em;
+}
+.baker {
+  font-size: 1.3rem;
+  color: #383961;
+  text-align: center;
+  width: 100%;
+  margin-left: 0;
+  margin-top: 1em;
+}
+.sandiqwin {
+   width: 60%;
+   height: 24em;
+   margin-top: 2em;
+}
+.radios {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  margin-left: 2em;
+  
+ }
+ 
+ label {
+  font-size: 1rem;
+  font-weight: bold;
+  width: 100%
+ }
+ textarea {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5rem;
+  width: 90%;
+  margin-top: 1em
+ }
+
+.cake--container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: .5em;
+  border-radius: 1em;
+  padding: 3em;
+  width: 100%;
+}
+ .overall {
+   border: 2px groove #f2e94e;
+   width: 80%;
+   padding: 5em;
+   margin-left: -2em
+
+ }
+ .form--container {
+  gap: .5em;
+  padding: 2em;
+  width: 100%;
+  margin-left: -4em;
+ }
+ input {
+  padding: 1em;
+  width: 100%;
+  font-size: 1rem;
+  border-radius: .5em;
+  margin-top: .5em;
+ }
+ 
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+  
 }
